--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "npx tailwindcss -i ./src/css/main.css -o ./dist/css/custom-tailwind.css --watch",
-    "watch:js": "npx mix watch"
+    "dev": "npm run development",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "prod": "npm run production",
+    "production": "mix --production"
   },
   "keywords": [
     "asdf"
@@ -17,7 +22,10 @@
   "author": "Zsena",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
+    "browser-sync": "^2.28.3",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "filename-regex": "^2.0.1",
     "laravel-mix": "^6.0.49",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
@@ -25,6 +33,9 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
-    "alpinejs": "^3.10.5"
+    "alpinejs": "^3.10.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "laravel-mix-ejs": "^2.0.1"
   }
 }
